# ML-from-scratch

./: decision-tree.ipynb  k-means.ipynb  knn.ipynb  linear-regression.ipynb  logistic-regression.ipynb  naive-bayes.ipynb  pca.ipynb  pyproject.toml  random-forest.ipynb  requirements.txt  svm.ipynb
